2007-02-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_jid.erl: Add support for JID comparison.

	* testsuite/check_jid.erl: Add JID comparison testsuite.

	* include/exmpp.hrl, src/exmpp_jid.erl, src/jlib.erl,
	testsuite/check_jid.erl: Fields of the #jid record were renamed to use
	the names found in RFC 3920. THIS CHANGE BREAKS API (not ABI).

2007-02-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_stringprep.erl: Catch up with original `stringprep' level
	of feature: a function to lowercase strings was added. Add functions
	if an identifier is a valid node, name or resource.

	* src/stringprep.erl: `stringprep' is now a simple frontend to
	`exmpp_stringprep'.

	* src/exmpp_jid.erl: Identifiers length are now checked.

	* testsuite/check_jid.erl: Complete testsuite with length checks.

	* src/exmpp_jlib.erl: Drop JID handling functions.

	* src/jlib.erl: Use `exmpp_jid' and `exmpp_stringprep' to treat JIDs.

	* configure.ac: Fixed a bug with --enable-debug option handling.
	Disable documentation by default, because `xmerl' is broken in Erlang
	R11B-3.

	* c_src/iconv_erl.c: Fixed a warning with iconv(3): on some platforms,
	`inbuf' is qualified by `const'. The configure script will check the
	prototype for us.

2007-02-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_jid.erl: Reworked JID parsing to handle more error cases.
	Now, the resource for a bare JID is set to `undefined', not the empty
	string.

	* testsuite/check_jid.erl: The testsuite for the current state of
	`exmpp_jid' is complete.

2007-02-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_stringprep.erl: New frontend for the exmpp_stringprep_drv
	port driver.

	* src/exmpp_internals.erl: New module which provide low-level
	functions for port drivers handling.

	* src/exmpp_sup.erl: Supervisor who is responsible for
	exmpp_stringprep startup.

	* src/exmpp.erl, ebin/exmpp.app.in: This module uses the `application'